still cleaning up

--- a/angular/src/app/employee/employee.component.html
+++ b/angular/src/app/employee/employee.component.html
@@ -1,7 +1,3 @@
-<app-subscribe-employee>
+<app-subscribe-employee></app-subscribe-employee>
 
-</app-subscribe-employee>
-
-<app-change-employee>
-
-</app-change-employee>
+<app-change-employee></app-change-employee>
