--- a/angular/src/app/ticket/ticket-sub/ticket-sub.component.html
+++ b/angular/src/app/ticket/ticket-sub/ticket-sub.component.html
@@ -1,9 +1,3 @@
-<app-subscribe-ticket>
+<app-subscribe-ticket></app-subscribe-ticket>
 
-
-</app-subscribe-ticket>
-
-<app-change-ticket>
-
-
-</app-change-ticket>
+<app-change-ticket></app-change-ticket>
