skeleton and routing// refactoring

--- a/angular/src/app/ticket/ticket-list/ticket-list-element/ticket-list-element.component.html
+++ b/angular/src/app/ticket/ticket-list/ticket-list-element/ticket-list-element.component.html
@@ -1,7 +1,8 @@
 <a
   style="cursor: pointer"
   class="list-group-item clearfix"
-  (click)="ticketSelected()">
+  (click)="ticketSelected()"
+>
   <div class="pull-left">
     <h4 class="list-group-item-heading" *ngIf="true">{{(ticket.ticketType)}}</h4>
     <h5 class="list-group-item-text">STATUS: {{ticket.ticketStatus}}</h5>
