routing done for now

--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -21,9 +21,8 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li routerLinkActive="active"><a routerLink="/tickets">Tickets</a> </li>
-        <li routerLinkActive="active"><a routerLink="/employeeSub">EmployeeSub</a></li>
-        <li routerLinkActive="active"><a routerLink="/ticketSub">TicketSub</a></li>
+        <li routerLinkActive="active"><a routerLink="/tickets">All tickets</a> </li>
+        <li routerLinkActive="active"><a routerLink="/ticket/new">New Ticket</a></li>
       </ul>
 
     </div>
