renaming job, we are talking issues, not tickets now

--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -21,8 +21,8 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li routerLinkActive="active"><a routerLink="/tickets">All tickets</a> </li>
-        <li routerLinkActive="active"><a routerLink="/ticket/new">New Ticket</a></li>
+        <li routerLinkActive="active"><a routerLink="/issues">Issues</a> </li>
+        <li routerLinkActive="active"><a routerLink="/issues/new">Add issue</a></li>
       </ul>
 
     </div>
