--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -1,30 +1,37 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a href="#" class="navbar-brand">Ticket-o-helper</a>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="">Got work?</a>
+  <button class="navbar-toggler btn"
+          type="button" data-toggle="collapse"
+          data-target="#navbarTogglerDemo02"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+          (click)="isCollapsed = !isCollapsed"
+          [attr.aria-expanded]="!isCollapsed"
+          aria-controls="navbarTogglerDemo02">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="collapse navbar-collapse">
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02" [ngbCollapse]="isCollapsed">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown"
-             appDropdown>
-          <a class="dropdown-toggle" role="button">
-            Manage<span class="caret"></span></a>
+      <li class="nav-item"
+          style="cursor: pointer">
+        <a class="nav-link" (click)="issues()">issues</a>
+      </li>
+      <li class="nav-item"
+          style="cursor: pointer">
+        <a class="nav-link" (click)="newIssue()">new issue</a>
+      </li>
+      <li>
 
-          <ul class="dropdown-menu">
-            <li><a style="cursor: pointer"> Peace</a> </li>
-            <li><a style="cursor: pointer"> Love</a> </li>
-          </ul>
+      </li>
 
-        </li>
-      </ul>
-
-      <ul class="nav navbar-nav navbar-right">
-        <li routerLinkActive="active"><a routerLink="/issues">Issues</a> </li>
-        <li routerLinkActive="active"><a routerLink="/issues/new">Add issue</a></li>
-      </ul>
-
+    </ul>
+    <div *ngIf="isCollapsed" class="navbar-brand">
+      <img
+        height="42" width="42"
+        style="border-radius: 50%"
+        src="https://experience.sap.com/fiori-design-web/wp-content/uploads/sites/5/2017/02/Avatar-Sizes-Custom-1.png" alt="Avatar">
     </div>
   </div>
 </nav>
