--- a/angular/src/app/issue/issue-list/issue-list-element/issue-list-element.component.html
+++ b/angular/src/app/issue/issue-list/issue-list-element/issue-list-element.component.html
@@ -5,14 +5,16 @@
 
     <div>
       <div class="d-flex w-100 justify-content-between">
-        <h4 class="list-group-item-heading" *ngIf="true">{{(issue.issue_key)}}</h4>
-        <button style="margin-bottom: 0"
+        <p class="list-group-item-heading" *ngIf="true">{{(issue.issue_key)}}</p>
+        <button style="margin-bottom:0; max-height: 40px"
                 class="btn btn-primary pull-right"
                 (click)="detailsSelected()">Details</button>
       </div>
-      <h5 class="list-group-item-text">STATUS: {{issue.status}}</h5>
-      <p *ngIf="isSelected" ><br>issue summary:</p>
-      <p *ngIf="isSelected" class="list-group-item">{{issue.summary}}</p>
+      <div *ngIf="isSelected">
+        <hr>
+        <h6><br>issue summary:</h6>
+        <p>{{issue.summary}}</p>
+      </div>
     </div>
 
 
