prompts in inputs added

--- a/angular/src/app/issue/issue-edit/issue-edit.component.html
+++ b/angular/src/app/issue/issue-edit/issue-edit.component.html
@@ -1,89 +1,106 @@
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col">
+    <br>
     <h1>Hi {{loggedUserName}}, you are now adding an issue</h1>
     <hr>
     <br>
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col">
     <form [formGroup]="issueForm" (ngSubmit)="onSubmit()">
 
-      <div class="row">
-        <div class="pull-left col-xs-2">
-          <div class="form-group">
+      <!-- key, priority, project name -->
+      <div class="form-row">
+        <div class="form-group col">
             <label for="issue_key">Key</label>
             <input type="text"
                    maxlength="10"
                    id="issue_key"
                    formControlName="key"
                    class="form-control">
-            <div *ngIf="issueForm.get('key').invalid && issueForm.get('key').touched" class="invalid-feedback">
-              Please insert key.
-            </div>
-            <div *ngIf="issueForm.get('key').valid && issueForm.get('key').touched" class="valid-feedback">
+            <div class="positive" *ngIf="issueForm.get('key').valid && issueForm.get('key').touched">
               Looks good.
             </div>
-          </div>
-
-        </div>
-        <div class="col-xs-2">
-            <div class="form-group">
-              <label for="priority">Priority</label>
-              <input type="text"
-                     id="priority"
-                     formControlName="priority"
-                     class="form-control">
+            <div class="warning" *ngIf="issueForm.get('key').invalid && issueForm.get('key').touched ">
+            Please insert key.
             </div>
         </div>
-        <div class="pull-right col-xs-3">
-          <div class="form-group e">
-            <label for="project_name" class="control-label pull-right">Project name</label>
+        <div class="form-group col">
+            <label for="priority">Priority</label>
             <input type="text"
-                   id="project_name"
-                   formControlName="project"
+                   id="priority"
+                   formControlName="priority"
                    class="form-control">
-          </div>
+            <div class="positive" *ngIf="issueForm.get('priority').valid && issueForm.get('priority').touched">
+              Looks good.
+            </div>
+            <div class="warning" *ngIf="issueForm.get('priority').invalid && issueForm.get('priority').touched ">
+              Please insert priority.
+            </div>
         </div>
+        <div class="form-group col">
+          <label for="project_name" class="control-label pull-right">Project name</label>
+          <input type="text"
+                 id="project_name"
+                 formControlName="project"
+                 class="form-control">
+          <div class="positive" *ngIf="issueForm.get('project').valid && issueForm.get('project').touched">
+            Looks good.
+          </div>
+          <div class="warning" *ngIf="issueForm.get('project').invalid && issueForm.get('project').touched ">
+            Please insert project.
+          </div>
+      </div>
       </div>
 
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="form-group">
-            <label for="description">Full issue description</label>
+      <!-- full description -->
+      <div class="form-row">
+          <div class="col form-group shadow-textarea">
+            <label for="description">Full description</label>
             <textarea type="text"
                       maxlength="500"
-                   rows="4"
-                   id="description"
-                   formControlName="description"
+                      rows="4"
+                      id="description"
+                      formControlName="description"
                       class="form-control input-lg"></textarea>
+            <div class="positive" *ngIf="issueForm.get('description').valid && issueForm.get('description').touched">
+              Looks good.
+            </div>
+            <div class="warning" *ngIf="issueForm.get('description').invalid && issueForm.get('description').touched ">
+              Please describe the problem.
+            </div>
+          </div>
+      </div>
+
+      <!-- summary -->
+      <div class="form-row">
+        <div class="col form-group">
+          <label for="summary">Problem summary</label>
+          <textarea type="text"
+                    maxlength="100"
+                    rows="1"
+                     id="summary"
+                     formControlName="summary"
+                     class="form-control"></textarea>
+          <div class="positive" *ngIf="issueForm.get('summary').valid && issueForm.get('summary').touched">
+            Looks good.
+          </div>
+          <div class="warning" *ngIf="issueForm.get('summary').invalid && issueForm.get('summary').touched ">
+            You need to add a shorter description here.
           </div>
         </div>
       </div>
 
+      <!-- buttons: cancel/save -->
       <div class="row">
-        <div class="col-xs-12">
-          <div class="form-group">
-            <label for="summary">Problem summary</label>
-            <textarea type="text"
-                      maxlength="100"
-                      rows="1"
-                       id="summary"
-                       formControlName="summary"
-                       class="form-control"
-                      ></textarea>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div class="row">
-        <div class="col-xs-12">
+        <div class="col">
           <button type="submit"
                   [disabled]="!issueForm.valid"
                   class="btn btn-success">Save</button>
-          <button (click)="leaveEdit()" type="button" class="btn btn-danger">Cancel</button>
+          <button type="button"
+                  (click)="leaveEdit()"
+                  class="btn btn-danger">Cancel</button>
         </div>
       </div>
 
