--- a/angular/src/app/issue/issue-edit/issue-edit.component.html
+++ b/angular/src/app/issue/issue-edit/issue-edit.component.html
@@ -1,88 +1,133 @@
 <div class="row">
   <div class="col">
     <br>
-    <h1>Hi {{loggedUserName}}, you are now adding an issue</h1>
-    <hr>
+    <h1 class="display-4">Hi {{loggedUserName}}, you are now adding an issue</h1>
+    <br>
+    <div class="progress" style="height: 1px;">
+      <div class="progress-bar bg-success"
+           role="progressbar"
+           [ngStyle]="{'width':getProgress()}"
+           aria-valuenow="25"
+           aria-valuemin="0"
+           aria-valuemax="100"></div>
+    </div>
     <br>
   </div>
 </div>
+
 <div class="row">
   <div class="col">
     <form [formGroup]="issueForm" (ngSubmit)="onSubmit()">
 
-      <!-- key, priority, project name -->
+      <!-- key -->
       <div class="form-row">
-        <div class="form-group col">
-            <label for="issue_key">Key</label>
+        <div class="col-lg-3 col-md-5 mb-3">
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" >issue key</span>
+            </div>
             <input type="text"
-                   maxlength="10"
-                   id="issue_key"
+                   (blur)="progressKEY = 20"
                    formControlName="key"
-                   class="form-control">
-            <div class="positive" *ngIf="issueForm.get('key').valid && issueForm.get('key').touched">
-              Looks good.
-            </div>
-            <div class="warning" *ngIf="issueForm.get('key').invalid && issueForm.get('key').touched ">
+                   class="form-control"
+                   placeholder="ABC-123"
+                   aria-label="key"
+                   id="issue_key">
+          </div>
+          <div class="positive"
+               *ngIf="issueForm.get('key').valid && issueForm.get('key').touched">
+            <p></p>
+            Looks good.
+          </div>
+          <div class="warning" *ngIf="issueForm.get('key').invalid && issueForm.get('key').touched ">
             Please insert key.
-            </div>
+          </div>
         </div>
-        <div class="form-group col">
-            <label for="priority">Priority</label>
+      </div>
+
+      <!-- priority -->
+      <div class="form-row">
+        <div class="col-lg-3 col-md-5 mb-3">
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" >priority</span>
+            </div>
             <input type="text"
-                   id="priority"
+                   (blur)="progressPRIORITY = 20"
                    formControlName="priority"
-                   class="form-control">
-            <div class="positive" *ngIf="issueForm.get('priority').valid && issueForm.get('priority').touched">
-              Looks good.
-            </div>
-            <div class="warning" *ngIf="issueForm.get('priority').invalid && issueForm.get('priority').touched ">
-              Please insert priority.
-            </div>
+                   class="form-control"
+                   placeholder="1-9"
+                   aria-label="Username">
+          </div>
+          <div class="positive" *ngIf="issueForm.get('priority').valid && issueForm.get('priority').touched">
+            Looks good.
+          </div>
+          <div class="warning" *ngIf="issueForm.get('priority').invalid && issueForm.get('priority').touched ">
+            Please insert priority.
+          </div>
         </div>
-        <div class="form-group col">
-          <label for="project_name" class="control-label pull-right">Project name</label>
-          <input type="text"
-                 id="project_name"
-                 formControlName="project"
-                 class="form-control">
+      </div>
+
+      <!-- project name -->
+      <div class="form-row">
+        <div class="col-lg-3 col-md-5 mb-3">
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" >project name</span>
+            </div>
+            <input type="text"
+                   (blur)="progressTEAM = 20"
+                   formControlName="project"
+                   class="form-control"
+                   placeholder="medic-center"
+                   aria-label="project_name"
+                   id="project_name">
+          </div>
           <div class="positive" *ngIf="issueForm.get('project').valid && issueForm.get('project').touched">
             Looks good.
           </div>
           <div class="warning" *ngIf="issueForm.get('project').invalid && issueForm.get('project').touched ">
             Please insert project.
           </div>
-      </div>
+        </div>
       </div>
 
       <!-- full description -->
       <div class="form-row">
-          <div class="col form-group shadow-textarea">
-            <label for="description">Full description</label>
-            <textarea type="text"
+        <div class="col mb-3 form-group shadow-textarea">
+          <div class="input-group mb-3">
+            <textarea class="form-control input-lg"
+                      (blur)="progressDESCLONG = 20"
+                      type="text"
                       maxlength="500"
                       rows="4"
-                      id="description"
                       formControlName="description"
-                      class="form-control input-lg"></textarea>
-            <div class="positive" *ngIf="issueForm.get('description').valid && issueForm.get('description').touched">
-              Looks good.
-            </div>
-            <div class="warning" *ngIf="issueForm.get('description').invalid && issueForm.get('description').touched ">
-              Please describe the problem.
-            </div>
+                      placeholder="Describe the issue with all possible details"
+                      aria-label="summary"
+                      id="description"></textarea>
+          </div><div class="positive" *ngIf="issueForm.get('description').valid && issueForm.get('description').touched">
+          Looks good.
+        </div>
+          <div class="warning" *ngIf="issueForm.get('description').invalid && issueForm.get('description').touched ">
+            Please describe the problem.
           </div>
+        </div>
       </div>
 
       <!-- summary -->
       <div class="form-row">
-        <div class="col form-group">
-          <label for="summary">Problem summary</label>
-          <textarea type="text"
-                    maxlength="100"
-                    rows="1"
-                     id="summary"
-                     formControlName="summary"
-                     class="form-control"></textarea>
+        <div class="col mb-3">
+          <div class="input-group mb-3">
+            <textarea type="text"
+                      (blur)="progressDESCSHORT = 20"
+                       maxlength="100"
+                       rows="1"
+                       formControlName="summary"
+                       class="form-control"
+                       placeholder="short description goes here"
+                       aria-label="summary"
+                          id="summary"></textarea>
+          </div>
           <div class="positive" *ngIf="issueForm.get('summary').valid && issueForm.get('summary').touched">
             Looks good.
           </div>
@@ -93,18 +138,19 @@
       </div>
 
       <!-- buttons: cancel/save -->
-      <div class="row">
-        <div class="col">
+      <div class="row justify-content-center">
+        <div class="col-1 col-sm-2">
           <button type="submit"
                   [disabled]="!issueForm.valid"
-                  class="btn btn-success">Save</button>
+                  class="btn btn-success btn-lg">Save</button>
+        </div>
+        <div class="col-1 col-sm-2">
           <button type="button"
                   (click)="leaveEdit()"
-                  class="btn btn-danger">Cancel</button>
+                  class="btn btn-danger btn-lg">Cancel</button>
         </div>
       </div>
-
-
+<br><hr>
     </form>
   </div>
 </div>
