--- a/angular/src/app/issue/issue-list/issue-list-element/issue-list-element.component.html
+++ b/angular/src/app/issue/issue-list/issue-list-element/issue-list-element.component.html
@@ -27,9 +27,9 @@
         </div>
       </div>
 
-        <div class="col" style="padding-left: 0; padding-right: 0">
+        <div class="col align-self-end" style="padding-left: 0; padding-right: 0">
           <button style="margin-bottom:0; max-height: 35px"
-                  class="btn btn-primary float-right"
+                  class="btn btn-primary"
                   (click)="detailsSelected()">Details</button>
         </div>
 
