--- a/angular/src/app/issue/issue-edit/issue-edit.component.html
+++ b/angular/src/app/issue/issue-edit/issue-edit.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col">
     <br>
-    <h1 class="display-4">Hi {{loggedUserName}}, you are now adding an issue</h1>
+    <h1 class="display-4">Hello {{loggedUserName}}, you are now adding an issue</h1>
     <br>
     <div class="progress" style="height: 1px;">
       <div class="progress-bar bg-success"
@@ -154,3 +154,7 @@
     </form>
   </div>
 </div>
+
+<footer class="my-5 pt-5 text-muted text-center text-small">
+  <p class="mb-1">&copy; 2019 Miłosz Szwedo</p>
+</footer>
