--- a/angular/src/app/issue/issue-list/issue-list.component.html
+++ b/angular/src/app/issue/issue-list/issue-list.component.html
@@ -38,4 +38,8 @@
       <br>
     </div>
   </div>
+
+  <footer class="my-5 pt-5 text-muted text-center text-small">
+    <p class="mb-1">&copy; 2019 Miłosz Szwedo</p>
+  </footer>
 </div>
