switched owner and assigned fields in entities

--- a/angular/src/app/issue/full-issue/full-issue.component.html
+++ b/angular/src/app/issue/full-issue/full-issue.component.html
@@ -26,7 +26,7 @@
           <div>
             <h6 class="my-0">Created by</h6>
           </div>
-          <span class="text-muted">{{issue.owner}}</span>
+          <span class="text-muted">{{details.owner}}</span>
         </li>
         <li class="list-group-item d-flex justify-content-between lh-condensed">
           <div>
@@ -56,7 +56,7 @@
             <tr>
               <td></td>
               <td class="align-middle"><h4>Assigned to</h4></td>
-              <td><h2><span class="badge badge-secondary align-middle">{{details.assigned}}</span></h2></td>
+              <td><h2><span class="badge badge-secondary align-middle">{{issue.assigned}}</span></h2></td>
             </tr>
             </tbody>
           </table>
