--- a/angular/src/app/issue/issue-edit/issue-edit.component.html
+++ b/angular/src/app/issue/issue-edit/issue-edit.component.html
@@ -102,7 +102,7 @@
                       maxlength="500"
                       rows="4"
                       formControlName="description"
-                      placeholder="Describe the issue with all possible details"
+                      placeholder="describe the issue with all possible details"
                       aria-label="summary"
                       id="description"></textarea>
           </div><div class="positive" *ngIf="issueForm.get('description').valid && issueForm.get('description').touched">
