buttons for cancel in edit, edit me in full-issue

--- a/angular/src/app/issue/issue-edit/issue-edit.component.css
+++ b/angular/src/app/issue/issue-edit/issue-edit.component.css
@@ -13,3 +13,10 @@ textarea.ng-valid.ng-touched, input.ng-valid.ng-touched{
 .positive{
   color: green;
 }
+
+input, textarea{
+  font-weight:500;
+}
+input::placeholder, textarea::placeholder{
+  font-weight: normal;
+}
