--- a/angular/src/app/issue/full-issue/full-issue.component.html
+++ b/angular/src/app/issue/full-issue/full-issue.component.html
@@ -15,7 +15,9 @@
     <hr>
   </div>
 
+
   <div class="row">
+    <!-- side container with updated, created and owner -->
     <div class="col-md-4 order-md-3 mb-3">
       <h4 class="d-flex justify-content-between align-items-center mb-3">
         <span class="text-muted">Updated</span>
@@ -73,6 +75,13 @@
     </h2>
     <p>{{details.description}}</p>
   </div>
+
+
+  <div class="float-right">
+      <button class="btn btn-dark" (click)="editClicked()">edit me</button>
+  </div>
+
+
 
   <!-- footer -->
   <footer class="my-5 pt-5 text-muted text-center text-small">
